--- a/src/style/header.css
+++ b/src/style/header.css
@@ -13,7 +13,7 @@
 
     /* font & color styling */
     color: white;
-    font-size: xx-large;
+    font-size: 40px;
     font-weight: bold;
     }
 
