--- a/style/footer.css
+++ b/style/footer.css
@@ -2,10 +2,10 @@
 
 /* a section to cover on whole footer */
 .footer {
-  font-family: "Josefin Sans", sans-serif;
-  font-optical-sizing: auto;
-  font-weight: 700;
-  font-style: normal;
+    font-family: "Josefin Sans", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 700;
+    font-style: normal;
 
     border-top:  7px solid;
     display: flex;
@@ -23,14 +23,14 @@
     align-items: center;
     margin: auto;
     max-height: 400px;
+
 }
 
 /* area of footer where styles title */
 .title {
-    margin: 35px auto 35px 0px;
+    margin: 35px;
     font-size: 70px;
     letter-spacing: 5px;
-    color: var(--main-theme);
 }
 
 /* area of footer which styles paragraph and texts */
@@ -51,7 +51,7 @@
 /* area which style the grid of pictures */
 .picture {
     padding: 20px;
-    width: 900px;
+    max-width: 900px;
     margin: auto;
     display: flex;
     justify-content: end;
@@ -66,8 +66,8 @@
     flex-direction: column;
     justify-content: end;
     align-items: center;
-    width: 230px;
-    height: 230px;
+    max-width: 230px;
+    max-height: 230px;
     box-shadow: 10px 10px 2px lightgray;
     gap: 15px;
     border: 7px solid var(--main-sub);
@@ -77,12 +77,14 @@
 .gmail {
     background-color: var(--main-sub);
     border: none;
+    gap: 20px;
+    padding: 0px 15px;
 }
 
 /* image gmail */
 .image-gmail{
     padding-top: 30px;
-    width: 120px;
+    width: 140px;
     transition: transform 0.7s, filter 0.7s;
 }
 
@@ -115,6 +117,7 @@
 
     /* restyling on footer information */
     .footer-info {
+        
         font-weight: 20;
         max-width: 500px;
         max-height: 250px;
@@ -132,27 +135,28 @@
     /* restyling on picture section */
     .picture {
         padding: 15px;
-        width: 500px;
+        max-width: 500px;
         justify-content: space-between;
-        gap: 10px 10px;
+        gap: 80px;
     }
 
     /* restyling on picture container box */
     .image-box {
-        width: 180px;
-        height: 180px;
-        gap: 0px;
+        max-width: 180px;
+        max-height: 180px;
     }
     
     /*background's for gmail image */
     .gmail {
-        background-color: var(--main-sub);
         border: none;
+        gap: 10px;
+        padding: 0px;
     }
     
     /* image gmail */
     .image-gmail{
-        width: 100px;
+        width: 120px;
+        padding: 40px 30px 0px 30px;
     }
     
     /* animation on image */
@@ -163,12 +167,13 @@
     
     /* text on image gmail */
     .image-gmail-text {
-        font-size: 15px;
+        padding: 0px 5px;
+        font-size: 13px;
     }
 
     /* size: on image astronut */
     .image-astronut {
-        width: 168px;;
+        width: 168px;
     }
 }
 
@@ -177,6 +182,7 @@
     .footer-info {
         padding: 0px 5px;
         font-size: 15px;
+        color: black;
     }
     .title {
         margin: 30px auto 0px 0px;
@@ -191,24 +197,28 @@
     /* restyling on picture container box */
     .image-box {
         border-radius: 18px 0px;
-        width: 100px;
-        height: 100px;
+        max-width: 100px;
+        max-height: 100px;
         box-shadow: 5px 5px 2px lightgray;
         gap: 5px;
         border: 5px solid var(--main-sub);
     }
     .image-gmail{
         padding-top: 30px;
-        width: 70px;
+        max-width: 70px;
     }
 
     /* size: on image astronut to 100px */
     .image-astronut {
-        width: 100px;
+        max-width: 100px;
     }
     .image-gmail-text {
         padding-bottom: 0px;
-        font-size: 9px;
+        font-size: 8px;
         letter-spacing: 0.5px;
     }
+}
+
+.footer-info .title{
+    color: black;
 }
