--- a/style/header.css
+++ b/style/header.css
@@ -15,7 +15,7 @@
 .title-header {
     font-size: 35px;
     color: white;
-    font-style: "Josefin Sans", sans-serif;
+    font-family: "Josefin Sans", sans-serif;
     font-optical-sizing: auto;
     font-weight: 400;
     font-style: normal;
